--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "John Odanga",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "1.19.0",
     "errorhandler": "1.5.0",
     "express": "^4.16.4",
